@@ -10,4 +10,3 @@ install-exec-hook:
 		echo "********************************************"; \
 		echo; \
 	fi
-
