@@ -1,3 +1,7 @@
+2004-07-10  Dan Dennedy <dan@dennedy.org>
+	* libavc1394/avc1394_vcr.c: added avc1394_vcr_get_timecode2() that uses
+	  an out param.
+	* test/dvcont.c: modified to use avc1394_vcr_get_timecode2()
 
 2004-07-09  Dan Dennedy <dan@dennedy.org>
 	* libavc1394/avc1394_simple.c: fix retry parameter of transactions.
